fix: path to template and picture name

--- a/lab2/lab2.tex
+++ b/lab2/lab2.tex
@@ -1,4 +1,4 @@
-\documentclass[bachelor, och, otchet]{SCWorks}
+\documentclass[bachelor, och, otchet]{../SCWorks}
 % Тип обучения (одно из значений):
 %    bachelor   - бакалавриат (по умолчанию)
 %    spec       - специальность
@@ -20,7 +20,7 @@
 %    critique   - рецензия на выпускную работу
 
 % * Добавлены вручную. За вопросами к @mchernigin
-\usepackage{preamble}
+\usepackage{../preamble}
 
 \begin{document}
 
