fix (lab4): print name

--- a/lab4/lab4.tex
+++ b/lab4/lab4.tex
@@ -125,7 +125,7 @@
 \begin{enumerate}
 \item Инициализуем сегмент стека.
 \item Инициализуем сегмент данных: объявим массив, строку для записи чисел и строку с символами перевода строки.
-\item Опишем процедуру вывода перевода строки.
+\item Опишем вспомогательные процедуры вывода строки и перевода строки.
 \item Процедура вывода числа:
 \begin{enumerate}
 	\item Сохраним в стек все регистры общего назначения.
@@ -140,12 +140,13 @@
 	\item Извлечём из стека регистры общего назначения.
 \end{enumerate}
 \item Выполним обязательную инициализацию регистра данных.
+\item Выведем имя и фамилию, а также перевод строки.
 \item Положим в CX 10 (количество элементов в первой половине массива), в BL "--- 2 (первый элемент), в SI "--- 0.
 \item В цикле положим очередное значение BL в массив по индексу SI, затем увеличим BL на 2, чтобы пройтись только по чётным числам, а SI "--- на 1.
 \item Положим в CX 10, в SI 0 (индекс текущего элемента из первой половины, его будем домножать на 5, чтобы получить элемент из второй половины), в DI 10 (индекс текущего элемента из второй половины), в BL 5 (на него будем домножать элемент из первой половины, чтобы получить элемент из второй половины).
 \item В цикле сохраним в AL текущее значение из первой половины массива, умножим его на коэффициент и запишем во вторую половину массива, затем увеличим оба индекса (SI и DI) на 1.
 \item Положим в CX 20 (количество элементов во всём массиве), в SI "--- 0.
-\item В цикле положим очередной элемент массива в AL, вызовем процедуру вывода числа, увеличим SI на 1. Если он стал равен 10, выполним шаг 12, иначе вернёмся к началу цикла или завершим его (если CX стал равен 0).
+\item В цикле положим очередной элемент массива в AL, вызовем процедуру вывода числа, увеличим SI на 1. Если он стал равен 10, выполним шаг 13, иначе вернёмся к началу цикла или завершим его (если CX стал равен 0).
 \item Выведем перевод строки для организации вывода в виде двух строк.
 \item Завершим программу.
 \end{enumerate}
