fix (lab 5): typos

--- a/lab5/lab5.tex
+++ b/lab5/lab5.tex
@@ -136,8 +136,8 @@
 	\item Определить процедуру print для вывода ASCII"=символа.
 	\item Вызвать процедуры clear и set\_mode.
 	\item Записать в AL ASCII"=код первого символа (41h "--- A), а в BL занести цвет первого ряда символов (0Ah "--- зелёный). Инициализовать переменную row значением 5.
-	\item Организовать внешний цикл с меткой rows. Условие завершения цикла "--- когда row станет равен 10, т.е. были выведены 5 рядов. Внутри внешнего цикла увеличивать на 1 row, AL и BL для изменения символа, цвета и номера ряда. Помимо этого каждую итерацию внешнего цикла выставлять переменную col равной 15.
-	\item Организовать внутренний цикл с меткой cols. Условие завершения цикла "--- когда col станет равен 25, т.е. были выведены $25-15=10$ рядов. Внутри внувложенного цикла вызываем процедуру cursor для того, чтобы изменить положение курсора, процедуру print для печати символа, а также увеличиваем col на 1.
+	\item Организовать внешний цикл с меткой rows. Условие завершения цикла "--- когда row станет равен 10, т.е. были выведены 5 рядов. Внутри внешнего цикла увеличивать на 1 row, AL и BL для изменения номера ряда, символа и цвета. Помимо этого каждую итерацию внешнего цикла выставлять переменную col равной 15.
+	\item Организовать внутренний цикл с меткой cols. Условие завершения цикла "--- когда col станет равен 25, т.е. были выведены $25-15=10$ рядов. Внутри вложенного цикла вызываем процедуру cursor для того, чтобы изменить положение курсора, процедуру print для печати символа, а также увеличиваем col на 1.
 	\item Выполнить запрос на ввод символа с клавиатуры, а затем вызвать процедуру ret\_mode, чтобы программа перешла в исходный режим и завершилась только по нажатию клавиши.
 \end{enumerate}
 
@@ -165,7 +165,7 @@
 \item Укажите в двоичной форме содержимое байтов атрибутов для:
 \begin{itemize}
 	\item пурпурных символов на голубом фоне: 00110101;
-	\item зеленых символов на белом мигающем фоне: 11110010.
+	\item зелёных символов на белом мигающем фоне: 11110010.
 \end{itemize}
 
 \item Объясните, как ограничивается количество доступных цветов для символа и для фона структурой байта атрибутов.
@@ -179,27 +179,27 @@
 	\hline
 \end{tabular}
 
-\item Укажите инструкции, необходимые для вывода на экран с помощью функции 09h прерывания INT 10h
+\item Укажите инструкции, необходимые для вывода на экран с помощью функции 09h прерывания INT 10h:
 \begin{itemize}
-	\item 10 желтых сердечек (ASCII 03h) на синем фоне:
-		\begin{minted}{nasm}
+	\item 10 жёлтых сердечек (ASCII 03h) на синем фоне:
+	\begin{minted}{nasm}
 mov AH,09h
 mov AL,03h
 mov BH,0
 mov BL,00011110b
 mov CX,10
 int 10h
-		\end{minted}
+	\end{minted}
 	
-	\item 5 белых звездочек (ASCII 2Ah) на красном фоне.
-		\begin{minted}{nasm}
+	\item 5 белых звёздочек (ASCII 2Ah) на красном фоне.
+	\begin{minted}{nasm}
 mov AH,09h
 mov AL,2Ah
 mov BH,0
 mov BL,01000111b
 mov CX,5
 int 10h
-		\end{minted}
+	\end{minted}
 \end{itemize}
 
 \begin{figure}[H]
