fix (lab5): direct video memory access

--- a/lab5/lab5.tex
+++ b/lab5/lab5.tex
@@ -129,15 +129,16 @@
 
 \section{Алгоритм программы}
 \begin{enumerate}
-	\item Определить в сегменте данных переменные row (номер строки), col (номер столбца), mode (для сохранения режима).
-	\item Определить процедуру set\_mode, которая устанавливает новый режим с помощью BIOS"=функции 10h, а также процедуру ret\_mode, которая после выполнения программы вернёт нас к исходному видеорежиму.
-	\item Определить процедуру cursor для установки курсора в нужную позицию.
-	\item Определить продедуру clear для прокрутки всего экрана вверх (его очистки).
-	\item Определить процедуру print для вывода ASCII"=символа.
-	\item Вызвать процедуры clear и set\_mode.
-	\item Записать в AL ASCII"=код первого символа (41h "--- A), а в BL занести цвет первого ряда символов (0Ah "--- зелёный). Инициализовать переменную row значением 5.
-	\item Организовать внешний цикл с меткой rows. Условие завершения цикла "--- когда row станет равен 10, т.е. были выведены 5 рядов. Внутри внешнего цикла увеличивать на 1 row, AL и BL для изменения номера ряда, символа и цвета. Помимо этого каждую итерацию внешнего цикла выставлять переменную col равной 15.
-	\item Организовать внутренний цикл с меткой cols. Условие завершения цикла "--- когда col станет равен 25, т.е. были выведены $25-15=10$ рядов. Внутри вложенного цикла вызываем процедуру cursor для того, чтобы изменить положение курсора, процедуру print для печати символа, а также увеличиваем col на 1.
+	\item Определить в сегменте данных переменную mode (для сохранения режима).
+	\item Определить процедуру set\_mode, которая устанавливает новый режим и активную страницу с помощью BIOS"=функций, а также процедуру ret\_mode, которая после выполнения программы вернёт нас к исходному видеорежиму.
+	\item Определить процедуру B10DISPLAY:
+	\begin{enumerate}
+		\item Добавить в стек все регистры общего назначения.
+		\item Записать в AL ASCII"=код первого символа (41h "--- A), а в AH занести цвет первого ряда символов (0Ah "--- зелёный). Занести в DI адрес начального смещения в видеопамяти (позиция 5:15 $\rightarrow((5 * 80) + 15) * 2 = 830$).
+		\item Занести в CX количество строк (5). Организовать внешний цикл с меткой rows. Внутри внешнего цикла увеличивать на 1 AL и BL для изменения символа и цвета, а к DI прибавлять 140 ($(80 - 10) * 2 = 140$) для перехода к следующей строке. Помимо этого каждую итерацию внешнего цикла сохранять CX в стеке, чтобы затем использовать этот регистр во внутреннем цикле, занося в него на каждой итерации 10 (количество столбцов).
+		\item Организовать внутренний цикл с меткой cols. Внутри цикла необходимо поместить содержимое AL (код символа) в первый, а AH (атрибут) "--- во второй байт видеостраницы. К следующему столбцу переходим, прибавляя к DI 2.
+		\item Достать из стека все регистры общего назначения.
+	\end{enumerate}
 	\item Выполнить запрос на ввод символа с клавиатуры, а затем вызвать процедуру ret\_mode, чтобы программа перешла в исходный режим и завершилась только по нажатию клавиши.
 \end{enumerate}
 
